--- a/html/team.html
+++ b/html/team.html
@@ -92,7 +92,7 @@ th, td {
       <td> N/A </td>
   </tr>
   <tr>
-      <td> Micheal H.</td>
+      <td> Michael H.</td>
       <td> Developer </td>
       <td> N/A </td>
   </tr>
