--- a/html/index.html
+++ b/html/index.html
@@ -3,29 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>NavBar</title>
+    <title>Serenity</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
   </head>
 
-  
   <body>
-    <header>
+    <header class = "navtop">
       <img class = "logo" src = "" alt = "logo">
-      <nav>
+      <nav class = "nav_bar">
         <ul class = "nav_links">
           <li><a href = "#">Features</a></li>
           <li><a href = "#">Pricing</a></li>
           <li><a href = "#">Our Team</a></li>
         </ul>
-      </nav>
-      <a class="cta" href = "#"><button>Sign Up</button></a>
+    </nav>
+      <a class="cta" href = "#"><button class = "signup">Sign Up</button></a>
     </header>
 
-    <header>
-      <p>This is a paragraph</p>
-    <header>
-    
+    <div class="appshow">
+      <h1 class="slogan">
+        Connecting the vulnerable parts of society <br> with the help they need
+      </h1>
+      <p class = "text">
+        Join us today on Serenity
+      </p>
+      <a class = "pta" href = "#" ><button class = "download">Download Now</button></a>
+    </div>
   </body>
 </html>
