Added styling to product page - initial

--- a/html/product.html
+++ b/html/product.html
@@ -4,46 +4,62 @@
         <title>
             Our Features
         </title>
+        <link rel="stylesheet" href="../navbar/styles.css">
+        <style>
+            .smalltext {
+                color:black;
+                font-family: 'Noto Sans JP', sans-serif;
+                padding-top: 1px;
+                font-size: 100%;
+                padding-left:5%;
+            }
+            .header3{
+                font-family: 'Noto Sans JP', sans-serif;
+                font-size: 150%;
+                padding-left:5%;
+            }
+        </style>
     </head>
     <body>
-        <h3>Navigation Placeholder</h3>
-        <nav>
-            <a href="google.com">Home</a>
-            <a href="google.com">Features</a>
-            <a href="google.com">Pricing</a>
-            <a href="google.com">Team</a>
-        </nav>
-        <hr>
+        <header class = "navtop">
+            <a href="../navbar/index.html">
+                <img class = "logo" src = "" alt = "logo">
+            </a>
+            <nav class = "nav_bar">
+              <ul class = "nav_links">
+                <li><a href = "product.html" style="padding:9px 25px;border:none;border-radius:50px;background-color: black;color:white;">Features</a></li>
+                <li><a href = "pricing.html">Pricing</a></li>
+                <li><a href = "team.html">Our Team</a></li>
+              </ul>
+          </nav>
+            <a class="cta" href = "#"><button class = "signup">Sign Up</button></a>
+          </header>
         <p>
-            <h2>Our features</h2>
-            <h3>Initial survey</h3>
+            <h2 class="producttitle"style="border-bottom-style:solid;"></h2>
+            <br></br>
+            <h3 class="header3">Initial survey</h3>
             <ul>
-                <li>Our surveys will ask you a list of personalized questions regarding mental health</li>
-                <li>Depending on the answers you give, we will recommend different mental health exercises</li>
+                <li class="smalltext">Our surveys will ask you a list of personalized questions regarding mental health</li>
+                <li class="smalltext">Depending on the answers you give, we will recommend different mental health exercises</li>
             </ul>
-            <h3>Daily Exercises</h3>
+            <h3 class="header3">Daily Exercises</h3>
             <ul>
-                <li>Our app will recommend you exercises to be done every day</li>
-                <li>Exercises can be as short as 5 minutes, but the dedicated user can do longer activities</li>
-                <li>Our challenges are tailored to you, using a machine learning algorithm based on the mood and habits of the user</li>
+                <li class="smalltext">Our app will recommend you exercises to be done every day</li>
+                <li class="smalltext">Exercises can be as short as 5 minutes, but the dedicated user can do longer activities</li>
+                <li class="smalltext">Our challenges are tailored to you, using a machine learning algorithm based on the mood and habits of the user</li>
             </ul>
-            <h3>Additional Resources</h3>
+            <h3 class="header3">Additional Resources</h3>
             <ul>
-                <li>We also provide a number of important mental health resources for people of all ages and skill levels</li>
-                <li>Our resources range from simple books for children to scholarly papers on mental health</li>
-                <li>You name it, we have it!</li>
+                <li class="smalltext">We also provide a number of important mental health resources for people of all ages and skill levels</li>
+                <li class="smalltext">Our resources range from simple books for children to scholarly papers on mental health</li>
+                <li class="smalltext">You name it, we have it!</li>
             </ul>
-            <h4>Point System</h4>
+            <h3 class="header3">Point System</h4>
             <ul>
-                <li>Through doing daily exercises, each user will be rewarded with points to spend in our shop!</li>
-                <li>Users can opt to buy premium rewards, such as removing ads from the app</li>
-                <li>Users can also spend their points on cosmetic badges or customizing their avatar</li>
+                <li class="smalltext">Through doing daily exercises, each user will be rewarded with points to spend in our shop!</li>
+                <li class="smalltext">Users can opt to buy premium rewards, such as removing ads from the app</li>
+                <li class="smalltext">Users can also spend their points on cosmetic badges or customizing their avatar</li>
             </ul>
         </p>
-        <hr>
-        <footer>
-            <h6>copyright or something idk</h6>
-            <h6>contact@serenity.org</h6>
-        </footer>
     </body>
 </html>
