--- a/html/home.html
+++ b/html/home.html
@@ -4,6 +4,12 @@
         <title>
             Home Page
         </title>
+        <style>
+            body {
+                background: #FBE0C3;
+                color: black;
+            }
+        <style>
     </head>
     <body>
         <h3>Navigation Placeholder</h3>
