--- a/html/home.html
+++ b/html/home.html
@@ -9,7 +9,7 @@
                 background: #FBE0C3;
                 color: black;
             }
-        <style>
+        </style>
     </head>
     <body>
         <h3>Navigation Placeholder</h3>
