--- a/html/home.html
+++ b/html/home.html
@@ -7,7 +7,6 @@
         <style>
             body {
                 background: #FBE0C3;
-                color: black;
             }
         </style>
     </head>
@@ -21,7 +20,7 @@
         </nav>
         <hr>
     <p>
-        <h2>Welcome to Serenity!</h3>
+        <h2 id='Title'>Welcome to Serenity!</h3>
         <h3>“To connect the vulnerable parts of our society with the help they need.”</h3>
         <br>
         <h3>Include QR code/link to our app here</h3>
@@ -40,3 +39,9 @@
     </p>
     </body>
 </html>
+
+<script type=’text/javascript’>
+  var myHeaderElement = document.getElementById(‘Title’);
+  myHeaderElement.textContent = ‘Goodbye’;
+</script>
+
