--- a/html/home.html
+++ b/html/home.html
@@ -48,5 +48,5 @@
     color: black;
 }
 
-<div id="Titlet" class="AttachOnMouseOutText" onMouseOver="highlightBG();return true;" onMouseOut="highlightOutBG();return true;">Hidden text</div>
+<div id="Title" class="AttachOnMouseOutText" onMouseOver="highlightBG();return true;" onMouseOut="highlightOutBG();return true;">Hidden text</div>
 
