--- a/html/home.html
+++ b/html/home.html
@@ -21,6 +21,7 @@
         <hr>
     <p>
         <h1 id='Title'>Welcome to Serenity!</h3>
+        <script src="index.js"></script>
         <h3>“To connect the vulnerable parts of our society with the help they need.”</h3>
         <br>
         <h3>Include QR code/link to our app here</h3>
@@ -39,11 +40,3 @@
     </p>
     </body>
 </html>
-
-
-function highlightBG() {  
-    document.getElementById('Title').className='AttachOnMouseOverText';   
-}
-function highlightOutBG(){
-    document.getElementById('Title').className='AttachOnMouseOutText';
-}
