Minor error fixing + Fixing hyperlinks

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <title>Serenity</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../navbar/styles.css">
   </head>
 
   <body>
@@ -14,9 +14,9 @@
       <img class = "logo" src = "" alt = "logo">
       <nav class = "nav_bar">
         <ul class = "nav_links">
-          <li><a href = "#">Features</a></li>
-          <li><a href = "#">Pricing</a></li>
-          <li><a href = "#">Our Team</a></li>
+          <li><a href = "product.html">Features</a></li>
+          <li><a href = "pricing.html">Pricing</a></li>
+          <li><a href = "team.html">Our Team</a></li>
         </ul>
     </nav>
     <a class="cta" href = "#"><button class = "signup">Sign Up</button></a>
