--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <title>Serenity</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../navbar/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
