Final stylesheet fix for the product page

--- a/html/product.html
+++ b/html/product.html
@@ -4,7 +4,7 @@
         <title>
             Our Features
         </title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../html/styles.css">
         <style>
             .smalltext {
                 color:black;
