Homepage link fixed

--- a/html/product.html
+++ b/html/product.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <header class = "navtop">
-            <a href="../navbar/index.html">
+            <a href="../html/index.html">
                 <img class = "logo" src = "" alt = "logo">
             </a>
             <nav class = "nav_bar">
