--- a/html/pricing.html
+++ b/html/pricing.html
@@ -5,7 +5,11 @@
     <meta charset=""utf-8">
     <link rel="shortcut icon" href=""/assets/favicon.ico">
 </head>
-
+<style>
+            body {
+                background: #FBE0C3;
+            }
+        </style>
 <body>
   <div class="pricing-plan-conatiner"></div>
   
