--- a/html/pricing.html
+++ b/html/pricing.html
@@ -3,7 +3,7 @@
     <title>pricing</title>
     <style>
             body {
-                background: #FBE0C3;
+                background: #ffeddf;
             }
         </style>
     <meta name="viewport" content=""width=device-width, initial-scale="1.0">
