--- a/html/product.html
+++ b/html/product.html
@@ -11,7 +11,7 @@
                 font-family: 'Noto Sans JP', sans-serif;
                 padding-top: 1px;
                 font-size: 100%;
-                padding-left:1px;
+                padding-left:5%;
             }
             .header3{
                 font-family: 'Noto Sans JP', sans-serif;
