--- a/html/pricing.html
+++ b/html/pricing.html
@@ -78,7 +78,7 @@
               <a href="./" class="pricing-plan__button">purchase</a>
               <p class="pricing-plan__cost">minimum spend $61 over 12 months</p>
   
-              <div style = "position:relative; left:80px; top:2px; background-color:yellow;">
+              <div style = "position:relative; left:1px; top:200px;">
          <img src=https://cdn.discordapp.com/attachments/1021958151060336721/1036476242309939260/unknown.png alt="Logo" width="300" height="250">
       </div>
               
