--- a/html/pricing.html
+++ b/html/pricing.html
@@ -33,6 +33,19 @@
               <a href="./" class="pricing-plan__button">purchase</a>
               <p class="pricing-plan__cost">minimum spend $61 over 12 months</p>
   
+              <header class = "navtop">
+            <a href="../html/index.html">
+                <img class = "logo" src = "" alt = "logo">
+            </a>
+            <nav class = "nav_bar">
+              <ul class = "nav_links">
+                <li><a href = "product.html" style="padding:9px 25px;border:none;border-radius:50px;background-color: black;color:white;">Features</a></li>
+                <li><a href = "pricing.html">Pricing</a></li>
+                <li><a href = "team.html">Our Team</a></li>
+              </ul>
+          </nav>
+            <a class="cta" href = "#"><button class = "signup">Sign Up</button></a>
+          </header>
               
           </div>
       </section><section class="pricing plan pricing-plan--highlighted">
