Added image as the homepage link

--- a/html/product.html
+++ b/html/product.html
@@ -23,7 +23,7 @@
     <body>
         <header class = "navtop">
             <a href="../html/index.html">
-                <img class = "logo" src = "" alt = "logo">
+                <img class = "logo" src = "https://cdn.discordapp.com/attachments/1021958151060336721/1036476242309939260/unknown.png" alt = "logo" style="display:block;position:absolute; width: 100px; height: 100px;left:10px;top:0px;padding-bottom: 0px;">
             </a>
             <nav class = "nav_bar">
               <ul class = "nav_links">
