--- a/html/home.html
+++ b/html/home.html
@@ -17,7 +17,7 @@
         </title>
         <style>
             body {
-                background: #FBE0C3;
+                background: #ffeddf;
             }
         </style>
     </head>
