--- a/html/home.html
+++ b/html/home.html
@@ -12,13 +12,16 @@
     </head>
     <body>
         <h3>Navigation Placeholder</h3>
-        <nav>
-            <a href="google.com">Home</a>
-            <a href="google.com">Features</a>
-            <a href="google.com">Pricing</a>
-            <a href="google.com">Team</a>
+        <nav class = "nav_bar">
+            <ul class = "nav_links">
+                <a href="google.com">Home</a>
+                <li><a href = "product.html">Features</a></li>
+                <li><a href = "pricing.html">Pricing</a></li>
+                <li><a href = "team.html">Our Team</a></li>
+            </ul>
         </nav>
-        <hr>
+        <a class="cta" href = "#"><button class = "signup">Sign Up</button></a>
+
     <p>
         <h1 id='Title'>Welcome to Serenity!</h3>
         <script src="home.js"></script>
