--- a/html/home.html
+++ b/html/home.html
@@ -8,27 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../html/styles.css">
   </head>
-    <head>
-        <title>
-            Home Page
-        </title>
-        <style>
-            body {
-                background: #ffeddf;
-            }
-        </style>
-    </head>
-    <body>
-        <h3>Navigation Placeholder</h3>
-        <nav class = "nav_bar">
-            <ul class = "nav_links">
-                <a href="google.com">Home</a>
-                <li><a href = "product.html">Features</a></li>
-                <li><a href = "pricing.html">Pricing</a></li>
-                <li><a href = "team.html">Our Team</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href = "#"><button class = "signup">Sign Up</button></a>
+
+  <body>
+    <header class = "navtop">
+      <img class = "logo" src = "" alt = "logo">
+      <nav class = "nav_bar">
+        <ul class = "nav_links">
+          <li><a href = "product.html">Features</a></li>
+          <li><a href = "pricing.html">Pricing</a></li>
+          <li><a href = "team.html">Our Team</a></li>
+        </ul>
+    </nav>
+    <a class="cta" href = "#"><button class = "signup">Sign Up</button></a>
+    </header>
 
     <p>
         <h1 id='Title'>Welcome to Serenity!</h3>
