--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,9 @@
 
   <body>
     <header class = "navtop">
-      <img class = "logo" src = "" alt = "logo">
+      <a href="../html/index.html">
+          <img class = "logo" src = "https://cdn.discordapp.com/attachments/1021958151060336721/1036476242309939260/unknown.png" alt = "logo" style="display:block;position:absolute; width: 100px; height: 100px;left:10px;top:0px;padding-bottom: 0px;">
+      </a>
       <nav class = "nav_bar">
         <ul class = "nav_links">
           <li><a href = "product.html">Features</a></li>
