Changed pricing hotlink

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
       <nav class = "nav_bar">
         <ul class = "nav_links">
           <li><a href = "product.html">Features</a></li>
-          <li><a href = "pricing.html">Pricing</a></li>
+          <li><a href = "pricing2.html">Pricing</a></li>
           <li><a href = "team.html">Our Team</a></li>
         </ul>
     </nav>
