Changed hotlink to pricing page

--- a/html/product.html
+++ b/html/product.html
@@ -28,7 +28,7 @@
             <nav class = "nav_bar">
               <ul class = "nav_links">
                 <li><a href = "product.html" style="padding:9px 25px;border:none;border-radius:50px;background-color: black;color:white;">Features</a></li>
-                <li><a href = "pricing.html">Pricing</a></li>
+                <li><a href = "pricing2.html">Pricing</a></li>
                 <li><a href = "team.html">Our Team</a></li>
               </ul>
           </nav>
