--- a/html/team.html
+++ b/html/team.html
@@ -7,8 +7,7 @@
     <title>Serenity</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- allows the webpage to scale-->
-    <link rel="stylesheet" href="../CSS/styles_team2.css">        
-
+    <link rel="stylesheet" href="styles_team2.css">
 
 
     <style>
@@ -17,8 +16,18 @@
         margin: 0px;
         padding: inherit;
         font-family: 'Noto Sans JP', 'sans-serif';
-        background-color:#FFBB98;
+        background-color:#FFEDDF;
+        overflow-y: scroll; /* Hide scrollbars */
 
+        /*to add functionality of the scroll for different Features*/
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+
+      }
+
+      /*hides the scroll bar but keeps the functionality*/
+      body::-webkit-scrollbar {
+        display: none;
       }
 
       .fake-body{
@@ -29,7 +38,7 @@
         justify-content: center;
       }
 
-      .fake-body2{ /*to decrease the width of the team boxes*/
+      .fake-body_inner{ /*to decrease the width of the team boxes*/
         width: 70%;
         margin-left: auto; /*aligns the images in the center*/
         margin-right: auto;
@@ -48,8 +57,8 @@
       }
 
       hr {
-        height: 3px;
-        background-color: black;
+        height: 4px;
+        background-color: white;
         border-radius: 20px;
       }
 
@@ -64,9 +73,9 @@
         position: relative;
         width: 100%;
         height: 50%;
-        background-color:  rgba(50, 70, 72, .2);
+        background-color: #FBE0C3; /*rgba(50, 70, 72, .2);*/
         box-shadow: 0 15px 25px rgba(0,0,0,0.2);
-        border: 2px solid rgba(255,255,255, .2);
+        /*border: 2px solid rgba(255,255,255, .2);*/
         border-radius: 5px;
         filter: blur(23);
         text-align: center;
@@ -82,7 +91,120 @@
         display: flex;
       }
 
+      .fakebody2.0{
 
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+      }
+
+      .footer{
+        /*position: fixed;*/
+        left: 0;
+        bottom: 0;
+        position: relative;
+        width: 100%;
+        /*height: 50%;*/
+        background-size: cover;
+        background-color: #344648; /*rgba(50, 70, 72, .2);*/
+        box-shadow: 0 15px 25px rgba(0,0,0,0.2);
+
+        margin-top: 10px;
+        color: white;
+        padding: 30px;
+
+
+      }
+
+      /*For the individual boxes inside the foot that make up the vertical search bar, as well as the
+        privacy and terms of services program*/
+      .lower_navbar{
+
+      }
+
+      .lower_navbar h5{
+        text-align: right;
+        padding-bottom: 20px;
+      }
+
+      .lower_navbar ul{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        /*background-color: #f1f1f1;*/
+        text-align: center;
+        /*position: fixed;*/
+        /*overflow: auto;*/
+        list-style-type: none;
+        text-align: center;
+
+      }
+
+      .lower-_navbar li{
+        /*padding: 30px 2px;
+        display: block;
+        color: #000;*/
+        /*padding: 8px 16px;*/
+        display: block;
+        color: white;
+        padding: 8px 16px;
+        text-decoration: none
+      }
+
+      .lower_navbar li a {
+        /*display: block;*/
+        color: white;
+        padding: 40px 16px;
+        text-decoration: none;
+      }
+
+      /* Change the link color on hover */
+      .lower_navbar li a:hover {
+        /*background-color: #555;*/
+        color: #FBE0C3;
+      }
+
+      /*This is the code for the search bar*/
+      .topnav input[type=text] {
+        float: right;
+        padding: 6px;
+        margin-top: 8px;
+        margin-right: 16px;
+        margin-bottom: 8px;
+        border: none;
+        font-size: 30px;
+      }
+
+      input {
+        width: 40%;
+        height: 40px;
+        padding: 10px;
+      }
+
+      .topnav input[type=text] {
+        border: 1px solid #ccc;
+      }
+
+      #div1{
+        width:30%;
+        padding: 0px 20px;
+        /*background-color: orange;*/
+        text-align: center;
+      }
+
+      #div2{
+        display: inline-block;
+        width:100%;
+        padding: 0px 30px;
+        background-color: orange:
+      }
+
+      .white_line{
+        background-color: white;
+        width: 3px;
+        height: 100%;
+      }
 
       /* for the flip cards*/
       .flip-card {
@@ -115,6 +237,7 @@
         height: 100%;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
+        border-color: black;
       }
 
       .flip-card-front {
@@ -125,26 +248,31 @@
       }
 
       .flip-card-back {
-        background-color: #2980b9;
+        background-color: #FFBB98;
         color: white;
         transform: rotateY(180deg);
         border-radius: 100px;
 
       }
 
+
+
       /* in order to get the flip cards in line*/
-      .row{
+      .row1{
         display: flex;
       }
 
-      .column{
+      .column1{
         flex: 16.67%;
         padding: 5px;
       }
 
+      /*Useless code*/
       .bottom-center{
         bottom: 8px;
-        text-align: center;
+        top: 0%;
+        left: 50%;
+        /*text-align: center;*/
       }
 
       img {
@@ -155,31 +283,37 @@
   </head>
   <body>
 
-    <h1 class="header"> Serenity </h1>
+    <!--<h1 class="header"> Serenity </h1>-->
 
-    <header class = "navtop">
+    <div class = "toppr">
 
-      <img class = "logo" src = "" alt = "logo">
-      <div class="navtop-centered">
+    <header class="navtop">
+
+    <img class = "logo" src = "https://cdn.discordapp.com/attachments/1021958151060336721/1036476242309939260/unknown.png" alt = "logo" style="display:block;position:absolute; width: 100px; height: 100px;left:10px;top:0px;padding-bottom: 0px;">
+     <div class="navtop-centered">
         <nav class="nav_bar">
           <ul class = "nav_links">
-              <li><a href = "#">Home</a></li>
-              <li><a href = "#">Features</a></li>
-              <li><a href = "#">Pricing</a></li>
-              <li><a href = "#">Our Team</a></li>
+              <li><a href = "index.html">Home</a></li>
+              <li><a href = "product.html">Features</a></li>
+              <li><a href = "pricing.html">Pricing</a></li>
+              <li><a href = "team.html">Our Team</a></li>
           </ul>
+
         </nav>
       </div>
+    </header>
 
         <div class="navtop-right">
           <ul>
-            <a href = "#"><button class = "login">Login</button></a>
-            <a  href = "#"><button class = "signup">Sign Up</button></a>
+            <a href = "#"><button class = "login" >Login</button></a>
+            <a  href = "#"><button class = "signup" style="float:right;">Sign Up</button></a>
           </ul>
         </div>
 
+    </div>
 
-    </header>
+
+
 
     <!--The body of the page-->
 
@@ -192,15 +326,17 @@
         <div class= "content">
 
           <div class="text">
-          <div class="fake-body2" align = "center">
+          <div class="fake-body_inner" align = "center">
           <!--For Tim-->
-              <div class="row">
-                <div class="column">
+              <div class="row1">
+                <div class="column1">
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
+                        <!--<h1>Tim S.</h1>-->
                         <!--<div class="bottom-center">Bottom Right</div>-->
+                        <img src="Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
+
                       </div>
                       <div class="flip-card-back">
                         <h1>Tim S.</h1>
@@ -212,7 +348,7 @@
                 </div>
 
               <!--For Arun S.-->
-              <div class="column">
+              <div class="column1">
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -228,7 +364,7 @@
               </div>
 
               <!--For Mayoor A.-->
-              <div class="column">
+              <div class="column1">
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -245,10 +381,10 @@
             </div>
             <br>
 
-            <div class = "row">
+            <div class = "row1">
 
               <!--For Michael H.-->
-              <div class="column">
+              <div class="column1">
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -264,7 +400,7 @@
               </div>
 
               <!--For Hasan-->
-              <div class="column">
+              <div class="column1">
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -280,7 +416,7 @@
               </div>
 
               <!--For Asad A.-->
-              <div class="column">
+              <div class="column1">
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
@@ -305,6 +441,54 @@
 
       <h1> </h1>
 
+    </div>
+
+    <!--Start of code for the bottom navigation part-->
+    <div class="fakebody2.0">
+      <div class="footer">
+
+        <div class="row1">
+        <div class="lower_navbar" id="div1">
+          <input type="text" placeholder="Search..">
+          <br>
+
+
+          <ul>
+            <li> <a style="color: #344648">  Home</a></li>
+            <li><a href = "index.html">Home</a></li>
+
+            <li><a href = "product.html">Features</a></li>
+
+            <li><a href = "pricing.html">Pricing</a></li>
+
+            <li><a href = "team.html">Our Team</a></li>
+          </ul>
+
+        </div>
+
+        <div class="white_line">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+        </div>
+
+        <div id="div2">
+
+          <h4 text-align="center"> Privacy and Terms of Services </h4>
+          <br>
+          <h9> We at Serenity are committed to ensuring your data is secure and only the use for the data collected, is for the onsite and in-app features such as: quizzes, certifications and daily exercises. They'll also be used to provide the customers with addition information and help lines regarding the symptoms of their mental illness. For additional information, please look at the completed Terms of Service on the app.   </h9>
+
+          <br><br>
+          <!--<h5 style="text-align:center;"> <i>To connect the vulnerable parts of our society with the help they need </i></h5>-->
+
+        </div>
+      </div>
+
+
+      </div>
     </div>
   </body>
   </html>
