--- a/html/team.html
+++ b/html/team.html
@@ -284,7 +284,19 @@
     </style>
   </head>
   <body>
-
+<header class = "navtop">
+      <a href="../html/index.html">
+          <img class = "logo" src = "https://cdn.discordapp.com/attachments/1021958151060336721/1036476242309939260/unknown.png" alt = "logo" style="display:block;position:absolute; width: 100px; height: 100px;left:10px;top:0px;padding-bottom: 0px;">
+      </a>
+      <nav class = "nav_bar">
+        <ul class = "nav_links">
+          <li><a href = "product.html">Features</a></li>
+          <li><a href = "pricing2.html">Pricing</a></li>
+          <li><a href = "team.html">Our Team</a></li>
+        </ul>
+    </nav>
+    <a class="cta" href = "#"><button class = "signup">Sign Up</button></a>
+    </header>
     
 
 
