--- a/html/team.html
+++ b/html/team.html
@@ -9,7 +9,7 @@
     <title>Serenity</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- allows the webpage to scale-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_team2.css">
 
 
     <style>
