--- a/html/team.html
+++ b/html/team.html
@@ -99,6 +99,7 @@
         font-family: 'sans-serif';
 
       }
+      
 
       .footer{
         /*position: fixed;*/
@@ -336,7 +337,7 @@
                       <div class="flip-card-front">
                         <!--<h1>Tim S.</h1>-->
                         <!--<div class="bottom-center">Bottom Right</div>-->
-                        <img src="Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
+                        <img src="pictures\Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
 
                       </div>
                       <div class="flip-card-back">
@@ -353,7 +354,7 @@
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
-                      <img src="Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
+                      <img src="pictures\Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                       <h1>Arun S.</h1>
@@ -369,7 +370,7 @@
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
-                      <img src="Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
+                      <img src="pictures\Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                       <h1>Mayoor A.</h1>
@@ -389,7 +390,7 @@
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
-                      <img src="Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
+                      <img src="pictures\Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                       <h1>Michael H.</h1>
@@ -405,7 +406,7 @@
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
-                      <img src="Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
+                      <img src="pictures\Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                       <h1>Hasan J.</h1>
@@ -421,7 +422,7 @@
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
-                      <img src="Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
+                      <img src="pictures\Headshot.jpg" alt="Avatar" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                       <h1>Asad A.</h1>
