--- a/html/team.html
+++ b/html/team.html
@@ -288,33 +288,19 @@
 
     <!--<h1 class="header"> Serenity </h1>-->
 
-    <div class = "toppr">
-
-    <header class="navtop">
-
-    <img class = "logo" src = "https://cdn.discordapp.com/attachments/1021958151060336721/1036476242309939260/unknown.png" alt = "logo" style="display:block;position:absolute; width: 100px; height: 100px;left:10px;top:0px;padding-bottom: 0px;">
-
-     <div class="navtop-centered">
-        <nav class="nav_bar">
-          <ul class = "nav_links">
-              <li><a href = "index.html">Home</a></li>
-              <li><a href = "product.html">Features</a></li>
-              <li><a href = "pricing.html">Pricing</a></li>
-              <li><a href = "team.html">Our Team</a></li>
-          </ul>
-
-        </nav>
-      </div>
+    <header class = "navtop">
+      <a href="../html/index.html">
+          <img class = "logo" src = "https://cdn.discordapp.com/attachments/1021958151060336721/1036476242309939260/unknown.png" alt = "logo" style="display:block;position:absolute; width: 100px; height: 100px;left:10px;top:0px;padding-bottom: 0px;">
+      </a>
+      <nav class = "nav_bar">
+        <ul class = "nav_links">
+          <li><a href = "product.html">Features</a></li>
+          <li><a href = "pricing2.html">Pricing</a></li>
+          <li><a href = "team.html">Our Team</a></li>
+        </ul>
+    </nav>
+    <a class="cta" href = "#"><button class = "signup">Sign Up</button></a>
     </header>
-
-        <div class="navtop-right">
-          <ul>
-            <a href = "#"><button class = "login" >Login</button></a>
-            <a  href = "#"><button class = "signup" style="float:right;">Sign Up</button></a>
-          </ul>
-        </div>
-
-    </div>
 
 
     <!--The body of the page-->
