--- a/html/team.html
+++ b/html/team.html
@@ -7,7 +7,7 @@
     <title>Serenity</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- allows the webpage to scale-->
-    <link rel="stylesheet" href="../css/teams.css">
+    <link rel="stylesheet" href="../css/team.css">
 
 
     <style>
