--- a/html/team.html
+++ b/html/team.html
@@ -446,7 +446,7 @@
 
               <li><a style="font-family:arial" href = "product.html">Features</a></li>
 
-              <li><a style="font-family:arial" href = "pricing.html">Pricing</a></li>
+              <li><a style="font-family:arial" href = "pricing2.html">Pricing</a></li>
 
               <li><a style="font-family:arial" href = "team.html">Our Team</a></li>
             </ul>
