Fixed text background being messed up

--- a/html/pricing2.html
+++ b/html/pricing2.html
@@ -4,7 +4,7 @@
         <title>
             Our Features
         </title>
-        <link rel="stylesheet" href="../html/styles.css">
+        <link rel="stylesheet" href="../html/team.css">
         <style>
             .smalltext {
                 color:black;
@@ -55,7 +55,7 @@
             }
         </style>
     </head>
-    <body>
+    <body style="background-color:#FFEDDF;">
         <header class = "navtop">
             <a href="../html/index.html">
                 <img class = "logo" src = "https://cdn.discordapp.com/attachments/1021958151060336721/1036476242309939260/unknown.png" alt = "logo" style="display:block;position:absolute; width: 100px; height: 100px;left:10px;top:0px;padding-bottom: 0px;">
